# nu_plugin_mime

./: Cargo.toml  README.md
src/: guess.rs  lib.rs  list.rs  mime_command.rs
